[package]
name = "statement_parser"
version = "0.1.0"
authors = ["acbilson"]
edition = "2018"

[dependencies]
structopt = { version = "~0.3", default-features = false }
log = "~0.4"
env_logger = "~0.7"
atty = "~0.2"
regex = "~1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
